--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,4 +26,11 @@
     "allowImportingTsExtensions": true,
     "noEmit": true
   }
+  ,
+  "exclude": [
+    "node_modules",
+    "dist",
+    "build",
+    "**/.cache"
+  ]
 }
